ensure input placeholders are visible on chrome browsers

--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -34,6 +34,10 @@
     font-size: 14px;
 }
 
+.feed__input > form > input::-webkit-input-placeholder {
+    color: #ffffff;
+}
+
 .feed__input > form > button {
     flex: 0;
     border: none;
